overflow issues solved

--- a/style.css
+++ b/style.css
@@ -519,7 +519,7 @@ footer {
   aspect-ratio: 1;
   width: 1.5rem;
 }
-@media screen and (min-width: 34em) {
+@media screen and (min-width: 48em) {
   .hero-section {
     display: grid;
     place-items: center;
@@ -609,7 +609,7 @@ footer {
   .hr::before {
     content: "";
     border: 1px solid rgb(117, 115, 115);
-    max-width: 70rem;
+    width: 70rem;
     display: flex;
     margin: 3rem 0 2rem 0;
   }
